<resources>
    <string name="app_name">Game Library</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search games...</string>
    <string name="recommended">Recommended</string>
    <string name="new_releases">New Releases</string>
    <string name="most_popular">Most Popular</string>
    <string name="shake_for_surprise">Shake for a surprise!</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="remove_from_wishlist">Remove from Wishlist</string>
    <string name="game_cover">Game cover image</string>
    <string name="genre">Genre</string>
    <string name="platform">Platform</string>
    <string name="store">Store</string>
    <string name="empty_wishlist">Empty wishlist icon</string>
    <string name="empty_wishlist_message">Your wishlist is empty\nAdd games from the browse section!</string>
    <string name="platforms">Platforms</string>
    <string name="genres">Genres</string>
    <string name="description">Description</string>
</resources>